Bug 949930 - CameraControl.sensorAngle doesn't return consistent angle among different devices. r=mikeh, a=1.3+